components completed / todo: fix spacing and css

--- a/frontend/src/components/Category/SingleProfessional.css
+++ b/frontend/src/components/Category/SingleProfessional.css
@@ -40,3 +40,8 @@ flex: none;
 order: 0;
 flex-grow: 0;
 }
+
+#jobCard{
+    width: 504px;
+/* height: 677px; */
+}
